--- a/android-start/app/src/main/res/values/strings.xml
+++ b/android-start/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Friendly Chat</string>
+    <string name="app_name">Notify POC</string>
     <string name="welcome_msg">Welcome!</string>
     <string name="sign_out">Sign Out</string>
     <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
@@ -12,4 +12,10 @@
     <string name="fresh_config">Fresh Config</string>
     <string name="cause_crash">Cause Crash</string>
     <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+
+    <string name="work_screen">Work</string>
+    <string name="complaints_screen">Complaints</string>
+    <string name="chat_screen">Chat</string>
+    <string name="splash_screen">Splash</string>
+
 </resources>
