Huge updates to support Prod! (cont.)

--- a/android-start/app/src/main/res/values/strings.xml
+++ b/android-start/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="chat_screen">Chat</string>
     <string name="splash_screen">Splash</string>
 
+    <string name="item_1">Item 1</string>
+    <string name="item_2">Item 2</string>
+    <string name="item_3">Item 3</string>
+
 </resources>
